ingress-nginx-proxy-webhook/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webhook
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: main
          image: "${IMAGE}"
          ports:
            - containerPort: 8080
          livenessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 20
            httpGet:
              port: 8080
              path: /healthz
