ingress-nginx-proxy-webhook/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: system
spec:
  selector:
    app.kubernetes.io/name: webhook
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
