ingress-nginx-proxy-webhook/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: system
  annotations:
    cert-manager.io/issuer: placeholder
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - placeholder.local
      secretName: SECRET_NAME
  rules:
    - host: placeholder.local
      http:
        paths:
          - backend:
              service:
                name: SERVICE_NAME
                port:
                  number: 8080
            pathType: Prefix
            path: /
