ingress-nginx-proxy-webhook/config/validating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
  namespace: system
  annotations:
    cert-manager.io/inject-ca-from: NAMESPACE/NAME
webhooks:
  - admissionReviewVersions: ["v1"]
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - "deployments"
        scope: "Namespaced"
    clientConfig:
      service:
        name: ingress-nginx-controller-internal
        namespace: ingress-nginx
        path: /validate
        port: 443
    name: no-latest-tag.webhook.com
    sideEffects: None
